<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/default_margin"
    android:layout_marginVertical="@dimen/default_top_margin"
    app:cardCornerRadius="20dp"
    app:cardElevation="@dimen/default_top_margin"
    app:cardBackgroundColor="?attr/colorSurface">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/eventImage"
            android:layout_width="@dimen/no_margin"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.App.EventImage"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <ImageView
            android:id="@+id/iconEventType"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="@dimen/default_top_margin"
            android:layout_marginTop="@dimen/default_top_margin"
            android:padding="@dimen/default_top_margin"
            android:background="@drawable/background_circle_transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white"
            tools:src="@drawable/ic_show_24" />

        <ImageButton
            android:id="@+id/buttonFavorite"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/default_top_margin"
            android:layout_marginEnd="@dimen/default_top_margin"
            android:background="@drawable/background_circle_transparent"
            android:src="@drawable/ic_favorite_border_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/default_margin"
        android:paddingTop="@dimen/default_margin">

        <TextView
            android:id="@+id/eventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_name"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="?attr/colorOnSurface"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/eventDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_top_margin"
            android:drawableStart="@drawable/ic_calendar_24"
            android:drawablePadding="@dimen/default_top_margin"
            android:gravity="center_vertical"
            android:text="@string/event_date"
            android:textColor="?android:attr/textColorSecondary"
            app:drawableTint="?android:attr/textColorSecondary" />

        <TextView
            android:id="@+id/eventLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawableStart="@drawable/ic_location_pin_24"
            android:drawablePadding="@dimen/default_top_margin"
            android:gravity="center_vertical"
            android:text="@string/event_location"
            android:textColor="?android:attr/textColorSecondary"
            app:drawableTint="?android:attr/textColorSecondary" />
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:background="@color/showme_gray_light"
        android:alpha="0.2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/default_top_margin"
        android:paddingBottom="@dimen/default_top_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonTicket"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tickets"
                app:icon="@drawable/ic_ticket_24"
                android:textColor="@color/showme_red"
                app:iconTint="@color/showme_red"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonDirections"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/directions"
                app:icon="@drawable/ic_directions_24"
                android:textColor="?android:attr/textColorSecondary"
                app:iconTint="?android:attr/textColorSecondary"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPlaylist"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playlist"
                app:icon="@drawable/ic_playlist_play_24"
                android:textColor="?android:attr/textColorSecondary"
                app:iconTint="?android:attr/textColorSecondary"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonShare"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/share"
                app:icon="@drawable/ic_share_24"
                android:textColor="?android:attr/textColorSecondary"
                app:iconTint="?android:attr/textColorSecondary"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
</com.google.android.material.card.MaterialCardView>