<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.profile.FavoritesFragment">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/my_favorites"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewFavorites"
        android:layout_width="@dimen/no_margin"
        android:layout_height="@dimen/no_margin"
        android:layout_marginTop="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle"
        tools:listitem="@layout/item_event" />

    <ProgressBar
        android:id="@+id/progressBarFavorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle" />

    <LinearLayout
        android:id="@+id/emptyFavoritesLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle">

        <ImageView
            android:id="@+id/imageEmptyFavorites"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_no_favorites_24"
            app:tint="?android:attr/textColorSecondary"
            android:layout_marginBottom="@dimen/default_margin"/>

        <TextView
            android:id="@+id/textEmptyFavorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_favorites_added"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="16sp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textEmptyFavoritesSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/you_haven_t_added_any_favorites_yet"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="14sp"
            android:alpha="0.7"
            android:gravity="center"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>